--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -8,5 +8,5 @@ COOR2_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from d
 DET_SAMP_FRAME: 20                                      #sample in each frame for the detectors
 ACS_SAMP_FRAME: 1                                       #sample in each frame for the coordinates
 DET_FILE_TYPE: u32                                      #file type for the detectors
-COOR1_FILE_TYPE: s32                                    #file type for the first coordinate
-COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
+COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
+COOR2_FILE_TYPE: s32                                    #file type for the second coordinate
