--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -1,12 +1,23 @@
 [Experiment Parameters]
 
 DETFREQ: 100.                                           #Sampling frequency of the detectors
-ACSFREQ: 5.                                             #Sampling frequency of the coordinates
 DET_DIR_CONV: 6.903363270000e-07,-5.787153550000e+00    #conversion value from dirfile to data for detectors
+DET_SAMP_FRAME: 20                                      #sample in each frame for the detectors
+DET_FILE_TYPE: u32                                      #file type for the detectors
+
+
+[RA_DEC Parameters]
+ACSFREQ: 5.                                             #Sampling frequency of the coordinates
 COOR1_DIR_CONV: 5.587935447693e-09,0.                   #conversion value from dirfile to data for the first coordinate
 COOR2_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
-DET_SAMP_FRAME: 20                                      #sample in each frame for the detectors
-ACS_SAMP_FRAME: 1                                       #sample in each frame for the coordinates
-DET_FILE_TYPE: u32                                      #file type for the detectors
 COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
 COOR2_FILE_TYPE: s32                                    #file type for the second coordinate
+ACS_SAMP_FRAME: 1                                       #sample in each frame for the coordinates
+
+[AZ_EL Parameters]
+ACSFREQ: 100.                                             #Sampling frequency of the coordinates
+COOR1_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the first coordinate
+COOR2_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
+COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
+COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
+ACS_SAMP_FRAME: 20                                      #sample in each frame for the coordinates
