--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -21,3 +21,12 @@ COOR2_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from d
 COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
 COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
 ACS_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
+
+[LST_LAT Parameters]
+LSTLATFREQ: 5.                                           #Sampling frequency of the coordinates
+LST_DIR_CONV: 2.77777777778e-04,0.                   #conversion value from dirfile to data for the first coordinate
+LAT_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
+LST_FILE_TYPE: u32                                    #file type for the first coordinate
+LAT_FILE_TYPE: u32                                    #file type for the second coordinate
+LSTLAT_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
+
