--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -15,12 +15,12 @@ COOR2_FILE_TYPE: s32                                    #file type for the secon
 ACS_SAMP_FRAME: 1                                       #sample in each frame for the coordinates
 
 [AZ_EL Parameters]
-ACSFREQ: 5.                                           #Sampling frequency of the coordinates
+ACSFREQ: 100.                                           #Sampling frequency of the coordinates
 COOR1_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the first coordinate
 COOR2_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
 COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
 COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
-ACS_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
+ACS_SAMP_FRAME: 20.                                      #sample in each frame for the coordinates
 
 [LST_LAT Parameters]
 LSTLATFREQ: 5.                                           #Sampling frequency of the coordinates
