Solved a bug on applying the offset

--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -27,6 +27,6 @@ LSTLATFREQ: 5.                                           #Sampling frequency of 
 LST_DIR_CONV: 2.77777777778e-04,0.                   #conversion value from dirfile to data for the first coordinate
 LAT_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
 LST_FILE_TYPE: u32                                    #file type for the first coordinate
-LAT_FILE_TYPE: u32                                    #file type for the second coordinate
+LAT_FILE_TYPE: s32                                    #file type for the second coordinate
 LSTLAT_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
 
