--- a/config/blastpol.cfg
+++ b/config/blastpol.cfg
@@ -30,3 +30,9 @@ LST_FILE_TYPE: u32                                    #file type for the first c
 LAT_FILE_TYPE: s32                                    #file type for the second coordinate
 LSTLAT_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
 
+[HWP Parameters]
+HWPFREQ: 5.                                           #Sampling frequency of the coordinates
+HWP_DIR_CONV: 1.525902189670e-05,0.                   #conversion value from dirfile to data for the first coordinate
+HWP_FILE_TYPE: u16                                    #file type for the first coordinate
+HWP_SAMP_FRAME: 1                                      #sample in each frame for the coordinates
+
