Cleaned some part of the code and start to include KIDs functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": ["--ignore=E2,E3,E5,W2,W3,F403,F405"]
+    "python.linting.flake8Args": ["--ignore=E2,E3,E5,W2,W3,F403,F405,E741"]
 }
